/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.13/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use JUnit Jupiter for testing.
    testImplementation libs.junit.jupiter

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // This dependency is used by the application.
    implementation libs.guava

    // Aeron
    implementation 'io.aeron:aeron-all:1.40.0'
    implementation 'org.agrona:agrona:1.16.0'
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'org.oms.OmsMain'

    applicationDefaultJvmArgs = [
        '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
        '--add-opens=java.base/java.lang=ALL-UNNAMED'
    ]
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}

// Task to print the classpath
task printClasspath {
    doLast {
        println sourceSets.main.runtimeClasspath.asPath
    }
}

// Task to run the Media Driver
task runMediaDriver(type: JavaExec) {
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'io.aeron.driver.MediaDriver'
    standardInput = System.in
    jvmArgs = [
        '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
        '--add-opens=java.base/java.lang=ALL-UNNAMED'
    ]
}
